--- a/client/index.html
+++ b/client/index.html
@@ -41,10 +41,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="./app.js"></script>
+    <script src="./controllers/loginCtrl.js"></script>
     <script src="./controllers/mainCtrl.js"></script>
     <script src="./controllers/tripCtrl.js"></script>
     <script src="./controllers/moneyCtrl.js"></script>
     <script src="./directives/navBarDir.js"></script>
+    <script src="./services/loginService.js"></script>
     <script src="./services/tripService.js"></script>
     <script src="./services/userService.js"></script>
     <script src="./js/circles.js"></script>
